--- a/item/templates/item/item_detail.html
+++ b/item/templates/item/item_detail.html
@@ -162,7 +162,7 @@
               </tr>
             </thead>
             <tbody>
-              {% for stock in stockitems %}
+              {% for stock in stocks %}
                 {# TODO: paginate page_obj #}
                 <tr>
                   <td>
