--- a/templates/homepage/statistics.html
+++ b/templates/homepage/statistics.html
@@ -6,7 +6,7 @@
   </div>
   <div class="panel-content">
     <p>Total Items: {{ items|length }}</p>
-    <p>Total Stocks: {{ stock_items|length }}</p>
+    <p>Total Stocks: {{ stocks|length }}</p>
     <p>Total Deliveries: {{ deliveries|length }}</p>
   </div>
 </div>
