--- a/templates/homepage/stock_levels.html
+++ b/templates/homepage/stock_levels.html
@@ -5,8 +5,8 @@
     </div>
   </div>
   <div class="panel-content">
-    <p>Low Stock Items: {{ low_stock_items|length }}</p>
-    <p>Out of Stock Items: {{ out_of_stock_items|length }}</p>
+    <p>Low Stock Items: {{ low_stocks|length }}</p>
+    <p>Out of Stock Items: {{ out_of_stocks|length }}</p>
     <p>Expired Items: {{ expired_items|length }}</p>
   </div>
 </div>
