--- a/delivery/templates/delivery/delivery_detail.html
+++ b/delivery/templates/delivery/delivery_detail.html
@@ -14,5 +14,5 @@
   </span>
 {% endblock panel_actions %}
 {% block panel_content %}
-  {% for stock in delivery.stockitems.all %}<p>{{ stock }}</p>{% endfor %}
+  {% for stock in delivery.stocks.all %}<p>{{ stock }}</p>{% endfor %}
 {% endblock panel_content %}
