--- a/delivery/templates/delivery/delivery_list.html
+++ b/delivery/templates/delivery/delivery_list.html
@@ -33,17 +33,17 @@
               {% comment %} {% if delivery.within_one_week %}
                 <a class="btn btn-sm"
                    href="{% url 'stock_create' %}?delivery={{ delivery.pk }}&next={{ request.path }}"
-                   title="Add stock items">
+                   title="Add stocks">
                   <i class="bi bi-plus-circle-dotted text-success"></i></a>
               {% endif %} {% endcomment %}
               <div class="row ps-2">
-              {% for stockitem in delivery.stockitems.all|slice:10 %}
+              {% for stock in delivery.stocks.all|slice:10 %}
               <div class="col-4">
-                <i class="bi bi-box-seam"></i> {{ stockitem.item.name }}
+                <i class="bi bi-box-seam"></i> {{ stock.item.name }}
               </div>
               {% endfor %}
               <div class="col-12">
-                {% if delivery.stockitems.count > 10 %}more ...{% endif %}
+                {% if delivery.stocks.count > 10 %}more ...{% endif %}
               </div>
               </div>
             </td>
