--- a/item/templates/item/stock_list.html
+++ b/item/templates/item/stock_list.html
@@ -14,14 +14,14 @@
     <table class="table">
       <thead>
         <tr>
-          <th scope="col">Item</th>
-          <th scope="col">Box ID</th>
-          <th scope="col">Level</th>
-          <th scope="col">Lot Number</th>
-          <th scope="col">Expiry Date</th>
-          <th scope="col" class="d-none d-lg-table-cell">Delivery</th>
-          <th scope="col">Location</th>
-          <th scope="col" class="d-none d-lg-table-cell">Actions</th>
+          <th>Item</th>
+          <th>Box ID</th>
+          <th>Level</th>
+          <th>Lot Number</th>
+          <th>Expiry Date</th>
+          <th class="d-none d-lg-table-cell">Delivery</th>
+          <th>Location</th>
+          <th class="d-none d-lg-table-cell">Actions</th>
         </tr>
       </thead>
       <tbody>
