--- a/item/templates/item/stock_update.html
+++ b/item/templates/item/stock_update.html
@@ -1,10 +1,9 @@
 {% extends "object_update_base.html" %}
-{% load crispy_forms_tags %}
 {% block title %}
   Stock
 {% endblock title %}
 {% block panel_title %}
-<i class="bi bi-box-seam-fill" style="color: var(--bs-orange);"></i> Update Stock Items
+  <i class="bi bi-box-seam-fill" style="color: var(--bs-orange);"></i> Update Stock Items
 {% endblock panel_title %}
 {% block update_form %}
   <div class="px-3 pt-3">
@@ -12,10 +11,9 @@
     {# item search input #}
     <div id="item-input" class="type-search-input">
       <div class="input-group mb-3">
-        <span class="input-group-text input-group-text-fw-sm">Item(s)</span>
+        <span class="input-group-text input-group-text-fw-sm">Item</span>
         <input type="text"
                name="item_query"
-               id="item_search_box"
                class="form-control"
                autocomplete="off"
                value="{{ item_name|default_if_none:'' }}"
@@ -45,7 +43,6 @@
       <span class="input-group-text input-group-text-fw-sm">Lot Number</span>
       <input type="text"
              name="lot_number"
-             id="id_lot_number"
              class="form-control"
              value="{{ form.lot_number.value|default_if_none:'' }}"
              autocomplete="off"
@@ -56,7 +53,6 @@
       <span class="input-group-text input-group-text-fw-sm">Expiry Date</span>
       <input type="date"
              name="expiry_date"
-             id="id_expiry_date"
              class="form-control"
              value="{{ form.expiry_date.value|date:'Y-m-d' }}"
              placeholder="Expiry Date">
@@ -88,19 +84,11 @@
     <span class="text-danger">{{ form.delivery.errors }}</span>
     <div class="input-group mb-3">
       <span class="input-group-text input-group-text-fw-sm">Quantity</span>
-      <input type="number"
-             name="quantity"
-             id="id_quantity"
-             min="1"
-             value="1"
-             class="form-control"
-             placeholder="Quantity received...">
+      <input type="text" name="quantity" value="1" class="form-control" disabled>
     </div>
     <div class="input-group mb-3">
       <span class="input-group-text input-group-text-fw-sm">Condition</span>
-      <select name="delivery_condition"
-              id="id_delivery_condition"
-              class="form-select">
+      <select name="delivery_condition" class="form-select">
         {% for condition_id, condition_name in form.fields.delivery_condition.choices %}
           <option value="{{ condition_id }}"
                   {% if condition_id == form.delivery_condition.value %}selected{% endif %}>
@@ -118,6 +106,7 @@
                name="location_query"
                id="location_search_box"
                class="form-control"
+               required
                autocomplete="off"
                value="{{ location_name|default_if_none:'' }}"
                placeholder="Start typing to enter a location..."
