removed app specific delete_form template for a generic one

--- a/item/templates/item/item_list.html
+++ b/item/templates/item/item_list.html
@@ -13,13 +13,13 @@
     <table class="table">
       <thead>
         <tr>
-          <th scope="col">Name</th>
-          <th scope="col">Product ID</th>
-          <th scope="col">Category</th>
-          <th scope="col">Manufacturer</th>
-          <th scope="col">Supplier</th>
-          <th scope="col">Description</th>
-          <th scope="col" class="d-none d-lg-table-cell">Actions</th>
+          <th>Name</th>
+          <th>Product ID</th>
+          <th>Category</th>
+          <th>Manufacturer</th>
+          <th>Supplier</th>
+          <th>Description</th>
+          <th class="d-none d-lg-table-cell">Actions</th>
         </tr>
       </thead>
       <tbody>
