--- a/item/templates/item/item_detail.html
+++ b/item/templates/item/item_detail.html
@@ -38,16 +38,9 @@
                      title="{{ item.category }}">{{ item.category }}</a>
                 </td>
               </tr>
-              <tr> {# only show the applicable metric #}
-                {% with item.get_applicable_metric as metric %}
-                  {% if metric.0 %}
-                    <td class="text-muted">{{ metric.0|capfirst }}:</td>
-                    <td>{{ metric.1 }} {{ metric.2 }}</td>
-                  {% else %}
-                    <td class="text-muted">Volume:</td>
-                    <td></td>
-                  {% endif %}
-                {% endwith %}
+              <tr>
+                <td class="text-muted">{{ item.quantity.name|capfirst }}:</td>
+                <td>{{ item.quantity.value }}{{ item.quantity.unit }}</td>
               </tr>
               <tr>
                 <td class="text-muted">Manufacturer:</td>
@@ -158,7 +151,8 @@
                 <th>Box Number</th>
                 <th>Expiry Date</th>
                 <th>Location</th>
-                <th>Level</th>
+                <th>Quantity</th>
+                <th class="text-muted">Actions</th>
               </tr>
             </thead>
             <tbody>
@@ -173,12 +167,23 @@
                   <td>
                     <a href="{% url 'stock_detail' stock.pk %}" title="stock details"><span class="badge rounded-pill bg-info"><b>{{ stock.ordinal_number }}</b></span></a>
                   </td>
-                  <td>{{ stock.expiry_date }}</td>
+                  <td>{{ stock.expiry_date|date:'d/m/Y' }}</td>
                   <td>
                     <a href="{% url 'location_detail' stock.location.pk %}"
                        title="location details">{{ stock.location }}</a>
                   </td>
-                  <td>level</td>
+                  <td>{{ stock.quantity.value }}{{ stock.quantity.unit }}</td>
+                  <td>
+                    <a href="{% url 'stock_update' stock.pk %}?next={{ request.path }}"
+                       title="Update {{ stock.name }}"><i class="bi bi-pencil-square"></i></a>
+                    <a hx-get="{% url 'stock_delete' stock.pk %}?next={{ request.path }}"
+                       hx-trigger="click"
+                       hx-target="#crudModal .modal-content"
+                       hx-swap="innerHTML"
+                       data-bs-toggle="modal"
+                       data-bs-target="#crudModal"
+                       href="javascript:void(0);"><i class="bi bi-trash"></i></a>
+                  </td>
                 </tr>
               {% endfor %}
             </tbody>
