--- a/item/templates/item/stock_update.html
+++ b/item/templates/item/stock_update.html
@@ -15,23 +15,9 @@
         <input type="text"
                name="item_query"
                class="form-control"
-               autocomplete="off"
-               value="{{ item_name|default_if_none:'' }}"
-               placeholder="Start typing to enter an item..."
-               hx-trigger="keyup changed delay:500ms"
-               hx-get="{% url 'item_search' %}"
-               hx-target="#itemSearchResults">
-        <span class="input-group-text">
-          <a href="{% url 'item_create' %}?next={{ request.path }}"
-             class="btn btn-sm btn-light"
-             data-bs-toggle="tooltip"
-             title="Add a new item">
-            <i class="bi bi-plus-circle text-success"></i>
-          </a>
-        </span>
+               disabled
+               value="{{ item_name }}">
       </div>
-      <span class="text-danger">{{ form.item.errors }}</span>
-      <div id="itemSearchResults" class="list-group type-search-result"></div>
       <input type="text"
              name="item"
              id="id_item"
@@ -134,25 +120,16 @@
 {% endblock update_form %}
 {% block js %}
   <script>
-  //set up the search result listener for the item search box
-  const searchConfigurations = [{
-    searchBoxId: "item_search_box",
-    textInputId: "id_item",
-    resultsDivId: "itemSearchResults",
-    resultClass: "item-search-result-item",
-    valueAttribute: "item-pk"
-  },
+  const config = 
   {
     searchBoxId: "location_search_box",
     textInputId: "id_location",
     resultsDivId: "locationSearchResults",
     resultClass: "location-search-result-location",
     valueAttribute: "location-pk"
-  }];
+  };
+  
+  TypeSearchResultListenerConfig(config);
 
-  // Initialize each search box listener
-  searchConfigurations.forEach(
-    config => TypeSearchResultListenerConfig(config)
-  );
   </script>
 {% endblock js %}
