--- a/item/templates/item/usage_create.html
+++ b/item/templates/item/usage_create.html
@@ -1,5 +1,6 @@
 <form action="" method="post">
   {% csrf_token %}
+  <input type="hidden" name="next" value="{{ request.GET.next }}">
   {{ form.as_p }}
   <input type="submit" value="Submit">
 </form>
