--- a/item/templates/item/stock_detail.html
+++ b/item/templates/item/stock_detail.html
@@ -21,4 +21,8 @@
     <a href="{% url 'usage_create' stock.pk %}?next={{ request.path }}"
        class="btn btn-primary">Create Usage</a>
   </div>
+  {# update time #}
+  {% with obj=stock %}
+    {% include "partials/object_last_updated.html" %}
+  {% endwith %}
 {% endblock panel_content %}
