--- a/company/templates/company/company_detail.html
+++ b/company/templates/company/company_detail.html
@@ -29,7 +29,7 @@
           <tr>
             <td class="text-muted">Website:</td>
             <td>
-              <i class="bi bi-link"></i> <a href="{{ company.website }}" title="company website">{{ company.website }}</a>
+              <i class="bi bi-link-45deg"></i><a href="{{ company.website }}" target="blank" title="company website">{{ company.website }}</a>
             </td>
           </tr>
           <tr>
