--- a/company/templates/company/company_list.html
+++ b/company/templates/company/company_list.html
@@ -40,7 +40,7 @@
             </td>
             <td class="text-center d-lg-table-cell">{{ company.phone }}</td>
             <td>
-              <a href="{{ company.website }}" title="Visit {{ company.website }}">{{ company.website }}</a>
+              <a href="{{ company.website }}" title="Visit {{ company.website }}" target="blank">{{ company.website }}</a>
             </td>
             <td class="d-lg-table-cell">
               <a href="{% url 'company_update' company.pk %}"><i class="bi bi-pencil-square"></i></a>
