--- a/company/templates/company/company_list.html
+++ b/company/templates/company/company_list.html
@@ -3,7 +3,7 @@
   Companies
 {% endblock title %}
 {% block panel_title %}
-<i class="bi bi-buildings" style="color: var(--bs-gray);"></i>  Companies
+<i class="bi bi-buildings company-text-color"></i>  Companies
 {% endblock panel_title %}
 {% block panel_actions %}
   <a href="{% url 'company_create' %}" class="btn btn-sm btn-success"><i class="bi bi-plus-circle"></i> New company</a>
