--- a/company/templates/company/company_update.html
+++ b/company/templates/company/company_update.html
@@ -4,7 +4,7 @@
   Company
 {% endblock title %}
 {% block panel_title %}
-<i class="bi bi-buildings" style="color: var(--bs-gray);"></i>  {{ object.name }}
+<i class="bi bi-buildings company-text-color"></i>  {{ object.name }}
 {% endblock panel_title %}
 {% block update_form %}
   <div class="px-3 pt-3">
