--- a/delivery/templates/delivery/delivery_list.html
+++ b/delivery/templates/delivery/delivery_list.html
@@ -3,7 +3,7 @@
   Deliveries
 {% endblock title %}
 {% block panel_title %}
-<i class="bi bi-boxes" style="color: var(--bs-green);"></i> All Deliveries
+<i class="bi bi-boxes delivery-text-color"></i> All Deliveries
 {% endblock panel_title %}
 {% block panel_actions %}
   <a href="{% url 'delivery_create' %}" class="btn btn-sm btn-success"><i class="bi bi-plus-circle"></i> New delivery</a>
