--- a/delivery/templates/delivery/delivery_update.html
+++ b/delivery/templates/delivery/delivery_update.html
@@ -4,7 +4,7 @@
   Delivery
 {% endblock title %}
 {% block panel_title %}
-  <i class="bi bi-cart-fill" style="color: var(--bs-green);"></i> Delivery Update
+  <i class="bi bi-cart-fill delivery-text-color"></i> Delivery Update
 {% endblock panel_title %}
 {% block update_form %}
   <div class="pt-3 px-3">
