--- a/item/templates/item/item_list.html
+++ b/item/templates/item/item_list.html
@@ -3,7 +3,7 @@
   Items
 {% endblock title %}
 {% block panel_title %}
-  <i class="bi bi-box2-fill" style="color: var(--bs-blue);"></i> All Items
+  <i class="bi bi-box2-fill item-text-color"></i> All Items
 {% endblock panel_title %}
 {% block panel_actions %}
   <a href="{% url 'item_create' %}" class="btn btn-sm btn-success"><i class="bi bi-plus-circle"></i> New item</a>
