--- a/item/templates/stock/stock_create.html
+++ b/item/templates/stock/stock_create.html
@@ -3,7 +3,7 @@
   Stock
 {% endblock title %}
 {% block panel_title %}
-  <i class="bi bi-box-seam-fill" style="color: var(--bs-orange);"></i> Commit to Stock
+  <i class="bi bi-box-seam-fill stock-text-color"></i> Commit to Stock
 {% endblock panel_title %}
 {% block create_form %}
   <div class="px-3 pt-3">
