--- a/item/templates/stock/stock_list.html
+++ b/item/templates/stock/stock_list.html
@@ -4,7 +4,7 @@
   Stock
 {% endblock title %}
 {% block panel_title %}
-  <i class="bi bi-boxes" style="color: var(--bs-orange);"></i> All Stock Items
+  <i class="bi bi-boxes stock-text-color"></i> All Stock Items
 {% endblock panel_title %}
 {% block panel_actions %}
   <a href="{% url 'stock_create' %}" class="btn btn-sm btn-success"><i class="bi bi-plus-circle"></i> New stock</a>
