--- a/location/templates/location/location_create.html
+++ b/location/templates/location/location_create.html
@@ -3,7 +3,7 @@
   Location Create
 {% endblock title %}
 {% block panel_title %}
-<i class="bi bi-geo-alt-fill" style="color: var(--bs-red);"></i> New Storage Location
+<i class="bi bi-geo-alt-fill location-text-color"></i> New Storage Location
 {% endblock panel_title %}
 {% block create_form %}
   <div class="px-3 pt-3">
