--- a/templates/homepage/deliveries.html
+++ b/templates/homepage/deliveries.html
@@ -1,7 +1,7 @@
 <div class="panel panel-frontpage">
   <div class="panel-heading">
     <div class="d-flex align-items-center pe-2">
-      <i class="bi bi-cart-fill pe-2" style="color: var(--bs-green);"></i> <b>Latest Deliveries</b>
+      <i class="bi bi-cart-fill pe-2 delivery-text-color"></i> <b>Latest Deliveries</b>
     </div>
   </div>
   <div class="panel-content">
