--- a/templates/homepage/stock_levels.html
+++ b/templates/homepage/stock_levels.html
@@ -1,7 +1,7 @@
 <div class="panel panel-frontpage">
   <div class="panel-heading">
     <div class="d-flex align-items-center pe-2">
-      <i class="bi bi-speedometer pe-2" style="color: var(--bs-orange);"></i>  <b>Stock level</b>
+      <i class="bi bi-speedometer pe-2 stock-text-color"></i>  <b>Stock level</b>
     </div>
   </div>
   <div class="panel-content">
