--- a/user/templates/user/profile_base.html
+++ b/user/templates/user/profile_base.html
@@ -8,7 +8,7 @@
       <div class="panel-heading d-flex justify-content-between align-items-center pe-2">
         {% block panel_heading %}
           <h4 class="panel-title">
-            <i class="bi bi-person-square" style="color: var(--bs-green);"></i>
+            <i class="bi bi-person-square text-success"></i>
             {% block panel_title %}
             {% endblock panel_title %}
           </h4>
