--- a/company/templates/company/company_detail.html
+++ b/company/templates/company/company_detail.html
@@ -3,7 +3,7 @@
   Company - {{ company.name }}
 {% endblock title %}
 {% block panel_title %}
-<i class="bi bi-buildings" style="color: var(--bs-gray);"></i> {{ company.name }}
+<i class="bi bi-buildings company-text-color"></i> {{ company.name }}
 {% endblock panel_title %}
 {% block panel_actions %}
   <span class="p-1">
@@ -51,7 +51,7 @@
       <div class="panel-content py-4">
         {% for item in company.manufactured_items.all %}
           <span class="ps-2 pe-4">
-            <i class="bi bi-box2-fill" style="color: var(--bs-yellow);"></i> <a href="{% url 'item_detail' item.pk %}" title="View item">{{ item.name }}</a>
+            <i class="bi bi-box2-fill item-text-color"></i> <a href="{% url 'item_detail' item.pk %}" title="View item">{{ item.name }}</a>
           </span>
         {% endfor %}
       </div>
@@ -66,7 +66,7 @@
       <div class="panel-content py-4">
         {% for item in company.supplied_items.all %}
           <span class="ps-2 pe-4">
-            <i class="bi bi-box2-fill" style="color: var(--bs-blue);"></i> <a href="{% url 'item_detail' item.pk %}" title="View item">{{ item.name }}</a>
+            <i class="bi bi-box2-fill text-success"></i> <a href="{% url 'item_detail' item.pk %}" title="View item">{{ item.name }}</a>
           </span>
         {% endfor %}
       </div>
