--- a/delivery/templates/delivery/delivery_create.html
+++ b/delivery/templates/delivery/delivery_create.html
@@ -3,7 +3,7 @@
   Delivery Create
 {% endblock title %}
 {% block panel_title %}
-  <i class="bi bi-cart-fill" style="color: var(--bs-green);"></i> New Delivery
+  <i class="bi bi-cart-fill delivery-text-color"></i> New Delivery
 {% endblock panel_title %}
 {% block create_form %}
   <div class="pt-3 px-3">
