--- a/delivery/templates/delivery/delivery_detail.html
+++ b/delivery/templates/delivery/delivery_detail.html
@@ -3,7 +3,7 @@
   Delivery
 {% endblock title %}
 {% block panel_title %}
-<i class="bi bi-cart-fill" style="color: var(--bs-green);"></i> Delivery Detail
+<i class="bi bi-cart-fill delivery-text-color"></i> Delivery Detail
 {% endblock panel_title %}
 {% block panel_actions %}
   <span class="p-1">
