--- a/item/templates/item/item_detail.html
+++ b/item/templates/item/item_detail.html
@@ -4,7 +4,7 @@
   Item Detail
 {% endblock title %}
 {% block panel_title %}
-  <i class="bi bi-box2-fill" style="color: var(--bs-blue);"></i> {{ item.name }}
+  <i class="bi bi-box2-fill item-text-color"></i> {{ item.name }}
 {% endblock panel_title %}
 {% block panel_actions %}
   <span class="p-1">
@@ -80,7 +80,7 @@
     <div class="col">
       <div class="panel">
         <div class="panel-heading d-flex justify-content-between align-items-center pe-2">
-          <span class="h5"><i class="bi bi-folder-fill" style="color: var(--bs-green);"></i> Documents</span>
+          <span class="h5"><i class="bi bi-folder-fill text-warning"></i> Documents</span>
           <a hx-get="{% url 'item_attachment_upload' item.pk %}"
              hx-trigger="click"
              hx-target="#crudModal .modal-content"
@@ -111,10 +111,9 @@
                     <td>{{ file.name }}</td>
                     <td>
                       {% if file.filetype %}
-                        <i class="bi bi-filetype-{{ file.filetype }}"
-                           style="color: var(--bs-green)"></i>
+                        <i class="bi bi-filetype-{{ file.filetype }} text-warning"></i>
                       {% else %}
-                        <i class="bi bi-file-earmark" style="color: var(--bs-green);"></i>
+                        <i class="bi bi-file-earmark text-warning"></i>
                       {% endif %}
                       <a href="{{ file.file.url }}" title="Open/download {{ file.filename }}">{{ file.filename }}</a>
                     </td>
@@ -151,7 +150,7 @@
     <div class="col">
       <div class="panel">
         <div class="panel-heading d-flex justify-content-between">
-          <span class="h5"><i class="bi bi-box-seam-fill" style="color: var(--bs-orange);"></i> Available Stocks</span>
+          <span class="h5"><i class="bi bi-box-seam-fill stock-text-color"></i> Available Stocks</span>
         </div>
         <div class="panel-content">
           <table class="table table-sm table-hover">
