--- a/item/templates/stock/stock_detail.html
+++ b/item/templates/stock/stock_detail.html
@@ -3,7 +3,7 @@
   Stock
 {% endblock title %}
 {% block panel_title %}
-  <i class="bi bi-box-seam-fill" style="color: var(--bs-orange);"></i> {{ stock }}
+  <i class="bi bi-box-seam-fill stock-text-color"></i> {{ stock }}
 {% endblock panel_title %}
 {% block panel_actions %}
   <span class="p-1">
