--- a/item/templates/stock/stock_update.html
+++ b/item/templates/stock/stock_update.html
@@ -3,7 +3,7 @@
   Stock
 {% endblock title %}
 {% block panel_title %}
-  <i class="bi bi-box-seam-fill" style="color: var(--bs-orange);"></i> Update Stock Items
+  <i class="bi bi-box-seam-fill stock-text-color"></i> Update Stock Items
 {% endblock panel_title %}
 {% block update_form %}
   <div class="px-3 pt-3">
