--- a/templates/homepage/notifications.html
+++ b/templates/homepage/notifications.html
@@ -1,7 +1,7 @@
 <div class="panel panel-frontpage">
   <div class="panel-heading">
     <div class="d-flex align-items-center pe-2">
-      <i class="bi bi-bell-fill pe-2" style="color: var(--bs-warning);"></i> <b>Notifications</b>
+      <i class="bi bi-bell-fill pe-2 text-warning"></i> <b>Notifications</b>
     </div>
   </div>
   <div class="panel-content">
