--- a/templates/homepage/statistics.html
+++ b/templates/homepage/statistics.html
@@ -1,7 +1,7 @@
 <div class="panel panel-frontpage">
   <div class="panel-heading">
     <div class="d-flex align-items-center pe-2">
-      <i class="bi bi-clipboard2-data pe-2" style="color: var(--bs-blue);"></i> <b>Statistics</b>
+      <i class="bi bi-clipboard2-data pe-2 text-info"></i> <b>Statistics</b>
     </div>
   </div>
   <div class="panel-content">
