--- a/templates/partials/navbar_menu_end.html
+++ b/templates/partials/navbar_menu_end.html
@@ -1,9 +1,9 @@
 <ul class="navbar-nav ms-auto">
   <li class="nav-item">
-    <a class="nav-link" href="#"><i class="bi bi-qr-code" style="color: var(--bs-blue);"></i> Scan</a>
+    <a class="nav-link" href="#"><i class="bi bi-qr-code scan-text-color"></i> Scan</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#"><i class="bi bi-search" style="color: var(--bs-green);"></i> Search</a>
+    <a class="nav-link" href="#"><i class="bi bi-search search-text-color"></i> Search</a>
   </li>
   <li class="nav-item dropdown">
     <a class="nav-link dropdown-toggle"
@@ -12,7 +12,7 @@
        role="button"
        data-bs-toggle="dropdown"
        aria-expanded="false"
-       href="javascript:void(0);"><i class="bi bi-person-fill" style="color: var(--bs-indigo);"></i> User</a>
+       href="javascript:void(0);"><i class="bi bi-person-fill user-text-color"></i> User</a>
     <ul class="dropdown-menu dropdown-menu-end"
         aria-labelledby="userDropdown">
       <li>
@@ -22,14 +22,14 @@
       </li>
       <li class="dropdown-divider"></li>
       <li>
-        <a href="{% url 'user_profile' %}" class="dropdown-item"><i class="bi bi-person-square" style="color: var(--bs-green);"></i> Profile</a>
+        <a href="{% url 'user_profile' %}" class="dropdown-item"><i class="bi bi-person-square text-success"></i> Profile</a>
       </li>
       <li>
-        <a href="#" class="dropdown-item"><i class="bi bi-sliders" style="color: var(--bs-purple);"></i> Settings</a>
+        <a href="#" class="dropdown-item"><i class="bi bi-sliders setting-text-color"></i> Settings</a>
       </li>
       <li class="dropdown-divider"></li>
       <li>
-        <a href="{% url 'logout' %}" class="dropdown-item"><i class="bi bi-box-arrow-right" style="color: var(--bs-red);"></i> Logout</a>
+        <a href="{% url 'logout' %}" class="dropdown-item"><i class="bi bi-box-arrow-right text-danger"></i> Logout</a>
       </li>
     </ul>
   </li>
