--- a/templates/partials/navbar_menu_start.html
+++ b/templates/partials/navbar_menu_start.html
@@ -6,13 +6,13 @@
        role="button"
        data-bs-toggle="dropdown"
        aria-expanded="false"
-       href="javascript:void(0);"><i class="bi bi-cart-fill" style="color: var(--bs-green);"></i> Delivery</a>
+       href="javascript:void(0);"><i class="bi bi-cart-fill delivery-text-color"></i> Delivery</a>
     <ul class="dropdown-menu" aria-labelledby="userDropdown">
       <li>
-        <a href="{% url 'delivery_create' %}" class="dropdown-item"><i class="bi bi-cart-plus-fill" style="color: var(--bs-success);"></i> New Delivery</a>
+        <a href="{% url 'delivery_create' %}" class="dropdown-item"><i class="bi bi-cart-plus-fill delivery-text-color"></i> New Delivery</a>
       </li>
       <li>
-        <a href="{% url 'delivery_list' %}" class="dropdown-item"><i class="bi bi-boxes" style="color: var(--bs-green);"></i> All Deliveries</a>
+        <a href="{% url 'delivery_list' %}" class="dropdown-item"><i class="bi bi-boxes delivery-text-color"></i> All Deliveries</a>
       </li>
     </ul>
   </li>
@@ -23,13 +23,13 @@
        role="button"
        data-bs-toggle="dropdown"
        aria-expanded="false"
-       href="javascript:void(0);"><i class="bi bi-box-seam-fill" style="color: var(--bs-orange);"></i> Stock</a>
+       href="javascript:void(0);"><i class="bi bi-box-seam-fill stock-text-color"></i> Stock</a>
     <ul class="dropdown-menu" aria-labelledby="userDropdown">
       <li>
-        <a href="{% url 'stock_create' %}" class="dropdown-item"><i class="bi bi-box-fill" style="color: var(--bs-orange);"></i> New Stock</a>
+        <a href="{% url 'stock_create' %}" class="dropdown-item"><i class="bi bi-box-fill stock-text-color"></i> New Stock</a>
       </li>
       <li>
-        <a href="{% url 'stock_list' %}" class="dropdown-item"><i class="bi bi-boxes" style="color: var(--bs-orange);"></i> All Stocks</a>
+        <a href="{% url 'stock_list' %}" class="dropdown-item"><i class="bi bi-boxes stock-text-color"></i> All Stocks</a>
       </li>
     </ul>
   </li>
@@ -40,19 +40,22 @@
        role="button"
        data-bs-toggle="dropdown"
        aria-expanded="false"
-       href="javascript:void(0);"><i class="bi bi-gear-fill" style="color: var(--bs-purple);"></i> Settings</a>
+       href="javascript:void(0);"><i class="bi bi-gear-fill setting-text-color"></i> Settings</a>
     <ul class="dropdown-menu" aria-labelledby="userDropdown">
       <li>
-        <a href="{% url 'item_list' %}" class="dropdown-item"><i class="bi bi-box2-fill" style="color: var(--bs-blue);"></i> Items</a>
+        <a href="{% url 'item_list' %}" class="dropdown-item"><i class="bi bi-box2-fill item-text-color"></i> All Items</a>
       </li>
       <li>
-        <a href="{% url 'company_list' %}" class="dropdown-item"><i class="bi bi-buildings" style="color: var(--bs-gray);"></i> Companies</a>
+        <a href="{% url 'inhouse_list' %}" class="dropdown-item"><i class="bi bi-box2-fill inhouse-text-color"></i> In-house Items</a>
       </li>
       <li>
-        <a href="{% url 'category_list' %}" class="dropdown-item"><i class="bi bi-bookmarks-fill" style="color: var(--bs-yellow);"></i> Categories</a>
+        <a href="{% url 'company_list' %}" class="dropdown-item"><i class="bi bi-buildings company-text-color"></i> Companies</a>
       </li>
       <li>
-        <a href="{% url 'location_list' %}" class="dropdown-item"><i class="bi bi-geo-alt-fill" style="color: var(--bs-red);"></i> Locations</a>
+        <a href="{% url 'category_list' %}" class="dropdown-item"><i class="bi bi-bookmarks-fill category-text-color"></i> Categories</a>
+      </li>
+      <li>
+        <a href="{% url 'location_list' %}" class="dropdown-item"><i class="bi bi-geo-alt-fill location-text-color"></i> Locations</a>
       </li>
     </ul>
   </li>
