inhouse icon and color

--- a/item/templates/inhouse/inhouse_update.html
+++ b/item/templates/inhouse/inhouse_update.html
@@ -3,7 +3,7 @@
   In-house Reagent
 {% endblock title %}
 {% block panel_title %}
-<i class="bi bi-heptagon-fill inhouse-text-color"></i> Update In-house Reagent
+  <i class="bi bi-box inhouse-text-color"></i> Update In-house Reagent
 {% endblock panel_title %}
 {% block update_form %}
   {{ form.as_p }}
