--- a/templates/partials/navbar_menu_start.html
+++ b/templates/partials/navbar_menu_start.html
@@ -46,7 +46,7 @@
         <a href="{% url 'item_list' %}" class="dropdown-item"><i class="bi bi-box2-fill item-text-color"></i> All Items</a>
       </li>
       <li>
-        <a href="{% url 'inhouse_list' %}" class="dropdown-item"><i class="bi bi-box2-fill inhouse-text-color"></i> In-house Items</a>
+        <a href="{% url 'inhouse_list' %}" class="dropdown-item"><i class="bi bi-box inhouse-text-color"></i> In-house Items</a>
       </li>
       <li>
         <a href="{% url 'company_list' %}" class="dropdown-item"><i class="bi bi-buildings company-text-color"></i> Companies</a>
