--- a/item/templates/inhouse/inhouse_create.html
+++ b/item/templates/inhouse/inhouse_create.html
@@ -3,7 +3,7 @@
   In-house Reagent
 {% endblock title %}
 {% block panel_title %}
-<i class="bi bi-heptagon-fill inhouse-text-color"></i> Create In-house Reagent
+<i class="bi bi-box inhouse-text-color"></i> Create In-house Reagent
 {% endblock panel_title %}
 {% block create_form %}
   {{ form.as_p }}
