--- a/templates/partials/object_last_updated.html
+++ b/templates/partials/object_last_updated.html
@@ -1,5 +1,5 @@
 <div class="row px-3">
   <div class="pt-0 text-end align-bottom fw-light fst-italic">
-    <small>Updated: {{ obj.last_updated|date:'d/m/Y H:i' }}</small>
+    <small>Updated: {{ object.last_updated|date:'d/m/Y H:i' }}</small>
   </div>
 </div>
