--- a/item/templates/inhouse/inhouse_create.html
+++ b/item/templates/inhouse/inhouse_create.html
@@ -3,8 +3,96 @@
   In-house Reagent
 {% endblock title %}
 {% block panel_title %}
-<i class="bi bi-box inhouse-text-color"></i> Create In-house Reagent
+  <i class="bi bi-box inhouse-text-color"></i> Create In-house Reagent
 {% endblock panel_title %}
 {% block create_form %}
-  {{ form.as_p }}
+  <div class="px-3 pt-3">
+    <div class="input-group mb-3">
+      <span class="input-group-text input-group-text-fw-sm">{{ form.name.label_tag }}</span>
+      {{ form.name }}
+      <span class="text-danger small">{{ form.name.errors }}</span>
+    </div>
+    <div class="input-group mb-3">
+      <span class="input-group-text input-group-text-fw-sm">{{ form.product_id.label_tag }}</span>
+      {{ form.product_id }}
+      <span class="text-danger small">{{ form.product_id.errors }}</span>
+    </div>
+    <div class="input-group mb-3">
+      <span class="input-group-text input-group-text-fw-sm">{{ form.description.label_tag }}</span>
+      {{ form.description }}
+      <span class="text-danger small">{{ form.description.errors }}</span>
+    </div>
+    {{ formset.management_form }}
+    <div class="panel mt-4">
+      <div class="panel-heading d-flex justify-content-between align-items-center px-3">
+        <b>Add Components</b>
+        <a href="javascript:void(0);"
+           id="add-more"
+           class="btn btn-sm item-text-color">
+          <b><i class="bi bi-plus-circle"></i> Add</b>
+        </a>
+      </div>
+      <div class="panel-content">
+        <div id="formset-container">
+          {% for comp_form in formset %}
+            <div class="reagent-component-form">
+              <div class="row py-2">
+                <div class="col-6">
+                  <div class="input-group">
+                    <span class="input-group-text">Reagent:</span>
+                    {{ comp_form.stock }}
+                  </div>
+                  <span class="text-danger small">{{ comp_form.stock.errors }}</span>
+                </div>
+                <div class="col-3">
+                  <div class="input-group">
+                    <span class="input-group-text">Quantity:</span>
+                    {{ comp_form.quantity }}
+                  </div>
+                  <span class="text-danger small">{{ comp_form.quantity.errors }}</span>
+                </div>
+                <div class="col-2">
+                  <div class="input-group">
+                    <span class="input-group-text">Unit:</span>
+                    {{ comp_form.quantity_unit }}
+                  </div>
+                  <span class="text-danger small">{{ comp_form.quantity_unit.errors }}</span>
+                </div>
+              </div>
+            </div>
+          {% endfor %}
+        </div>
+      </div>
+    </div>
+  </div>
 {% endblock create_form %}
+{% block js %}
+  <script>
+    document.getElementById('add-more').addEventListener('click', function() {
+      var totalForms = document.getElementById('id_reagentcomponent_set-TOTAL_FORMS');
+      var formIndex = parseInt(totalForms.value);
+      var newElement = document.querySelector('.reagent-component-form:last-child').cloneNode(true);
+  
+      // Helper function to update attributes
+      function updateAttribute(element, attr) {
+          if (element.hasAttribute(attr)) {
+              element.setAttribute(attr, element.getAttribute(attr).replace(/-\d+-/, '-' + formIndex + '-'));
+          }
+      }
+  
+      // Update form field names and IDs
+      newElement.querySelectorAll('input, select, textarea').forEach(function(element) {
+          updateAttribute(element, 'name');
+          updateAttribute(element, 'id');
+      });
+  
+      // Append the new form
+      document.getElementById('formset-container').appendChild(newElement);
+  
+      // Increment the TOTAL_FORMS count
+      totalForms.value = formIndex + 1;
+  });
+  
+  
+  </script>
+{% endblock js %}
