--- a/templates/partials/navbar_menu_start.html
+++ b/templates/partials/navbar_menu_start.html
@@ -40,14 +40,25 @@
        role="button"
        data-bs-toggle="dropdown"
        aria-expanded="false"
-       href="javascript:void(0);"><i class="bi bi-gear-fill setting-text-color"></i> Settings</a>
+       href="javascript:void(0);"><i class="bi bi-box2-fill item-text-color"></i> Items</a>
     <ul class="dropdown-menu" aria-labelledby="userDropdown">
       <li>
-        <a href="{% url 'item_list' %}" class="dropdown-item"><i class="bi bi-box2-fill item-text-color"></i> All Items</a>
+        <a href="{% url 'item_list' %}" class="dropdown-item"><i class="bi bi-box2-fill item-text-color"></i> List of All Items</a>
       </li>
       <li>
-        <a href="{% url 'inhouse_list' %}" class="dropdown-item"><i class="bi bi-box inhouse-text-color"></i> In-house Items</a>
+        <a href="{% url 'inhouse_list' %}" class="dropdown-item"><i class="bi bi-box inhouse-text-color"></i> In-house Reagents</a>
       </li>
+    </ul>
+  </li>
+  <li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle"
+       href="#"
+       id="stockDropdown"
+       role="button"
+       data-bs-toggle="dropdown"
+       aria-expanded="false"
+       href="javascript:void(0);"><i class="bi bi-gear-fill setting-text-color"></i> Settings</a>
+    <ul class="dropdown-menu" aria-labelledby="userDropdown">      
       <li>
         <a href="{% url 'company_list' %}" class="dropdown-item"><i class="bi bi-buildings company-text-color"></i> Companies</a>
       </li>
