--- a/item/templates/inhouse/inhouse_detail.html
+++ b/item/templates/inhouse/inhouse_detail.html
@@ -1,6 +1,6 @@
 {% extends "object_detail_base.html" %}
 {% block panel_title %}
-  <i class="bi bi-box inhouse-text-color"></i> {{ object.name }}
+  <i class="bi bi-box-fill inhouse-text-color"></i> {{ object.name }}
 {% endblock panel_title %}
 {% block panel_actions %}
   <span class="p-1">
