--- a/templates/partials/navbar_menu_start.html
+++ b/templates/partials/navbar_menu_start.html
@@ -26,7 +26,7 @@
        href="javascript:void(0);"><i class="bi bi-box-seam-fill stock-text-color"></i> Stock</a>
     <ul class="dropdown-menu" aria-labelledby="userDropdown">
       <li>
-        <a href="{% url 'stock_create' %}" class="dropdown-item"><i class="bi bi-box-fill stock-text-color"></i> New Stock</a>
+        <a href="{% url 'stock_create' %}" class="dropdown-item"><i class="bi bi-box-seam-fill stock-text-color"></i> New Stock</a>
       </li>
       <li>
         <a href="{% url 'stock_list' %}" class="dropdown-item"><i class="bi bi-boxes stock-text-color"></i> All Stocks</a>
@@ -43,10 +43,18 @@
        href="javascript:void(0);"><i class="bi bi-box2-fill item-text-color"></i> Items</a>
     <ul class="dropdown-menu" aria-labelledby="userDropdown">
       <li>
-        <a href="{% url 'item_list' %}" class="dropdown-item"><i class="bi bi-box2-fill item-text-color"></i> List of All Items</a>
+        <a href="{% url 'item_create' %}" class="dropdown-item"><i class="bi bi-box2-fill item-text-color"></i> New Items</a>
       </li>
       <li>
-        <a href="{% url 'inhouse_list' %}" class="dropdown-item"><i class="bi bi-box inhouse-text-color"></i> In-house Reagents</a>
+        <a href="{% url 'item_list' %}" class="dropdown-item"><i class="bi bi-boxes item-text-color"></i> All Items</a>
+      </li>
+      <li class="dropdown-divider"></li>
+      <li class="dropdown-header">In-house reagents</li>
+      <li>
+        <a href="{% url 'inhouse_create' %}" class="dropdown-item"><i class="bi bi-box-fill inhouse-text-color"></i> New Reagents</a>
+      </li>
+      <li>
+        <a href="{% url 'inhouse_list' %}" class="dropdown-item"><i class="bi bi-boxes inhouse-text-color"></i> All Reagents</a>
       </li>
     </ul>
   </li>
@@ -58,7 +66,7 @@
        data-bs-toggle="dropdown"
        aria-expanded="false"
        href="javascript:void(0);"><i class="bi bi-gear-fill setting-text-color"></i> Settings</a>
-    <ul class="dropdown-menu" aria-labelledby="userDropdown">      
+    <ul class="dropdown-menu" aria-labelledby="userDropdown">
       <li>
         <a href="{% url 'company_list' %}" class="dropdown-item"><i class="bi bi-buildings company-text-color"></i> Companies</a>
       </li>
