change "javascript:void(0);" to "javascript:"

--- a/company/templates/company/company_list.html
+++ b/company/templates/company/company_list.html
@@ -50,7 +50,7 @@
                  hx-swap="innerHTML"
                  data-bs-toggle="modal"
                  data-bs-target="#crudModal"
-                 href="javascript:void(0);"><i class="bi bi-trash"></i></a>
+                 href="javascript:"><i class="bi bi-trash"></i></a>
             </td>
           </tr>
         {% endfor %}
