--- a/item/templates/stock/stock_create.html
+++ b/item/templates/stock/stock_create.html
@@ -61,7 +61,7 @@
     <span class="text-danger">{{ form.expiry_date.errors }}</span>
     <div class="input-group mb-3">
       <span class="input-group-text input-group-text-fw-sm">Delivery
-        <a href="javascript:void(0);"
+        <a href="javascript:"
            data-bs-toggle="tooltip"
            data-bs-placement="top"
            title="Only delivery received within the last week can be seen here.">
