--- a/category/templates/category/category_search_results.html
+++ b/category/templates/category/category_search_results.html
@@ -1,3 +1,3 @@
 {% for category in found_categories %}
-  <a href="javascript:void(0);" class="list-group-item list-group-item-action category-search-result-category" category-pk={{ category.pk }}>{{ category }}</a>
+  <a href="javascript:" class="list-group-item list-group-item-action category-search-result-category" category-pk={{ category.pk }}>{{ category }}</a>
 {% endfor %}
