--- a/company/templates/company/company_search_results.html
+++ b/company/templates/company/company_search_results.html
@@ -1,3 +1,3 @@
 {% for company in found_companies %}
-  <a href="javascript:void(0);" class="list-group-item list-group-item-action company-search-result-{{ company_type }}" company-pk={{ company.pk }}>{{ company }}</a>
+  <a href="javascript:" class="list-group-item list-group-item-action company-search-result-{{ company_type }}" company-pk={{ company.pk }}>{{ company }}</a>
 {% endfor %}
