--- a/item/templates/inhouse/inhouse_create.html
+++ b/item/templates/inhouse/inhouse_create.html
@@ -26,7 +26,7 @@
     <div class="panel mt-4">
       <div class="panel-heading d-flex justify-content-between align-items-center px-3">
         <b>Add Components</b>
-        <a href="javascript:void(0);"
+        <a href="javascript:"
            id="add-more"
            class="btn btn-sm item-text-color">
           <b><i class="bi bi-plus-circle"></i> Add</b>
