--- a/item/templates/stock/stock_update.html
+++ b/item/templates/stock/stock_update.html
@@ -46,7 +46,7 @@
     <span class="text-danger">{{ form.expiry_date.errors }}</span>
     <div class="input-group mb-3">
       <span class="input-group-text input-group-text-fw-sm">Delivery
-        <a href="javascript:void(0);"
+        <a href="javascript:"
            data-bs-toggle="tooltip"
            data-bs-placement="top"
            title="Only +/- 3 days are allowed!">
