--- a/location/templates/location/location_search_results.html
+++ b/location/templates/location/location_search_results.html
@@ -1,3 +1,3 @@
 {% for location in found_locations %}
-  <a href="javascript:void(0);" class="list-group-item list-group-item-action location-search-result-location" location-pk={{ location.pk }}>{{ location }}</a>
+  <a href="javascript:" class="list-group-item list-group-item-action location-search-result-location" location-pk={{ location.pk }}>{{ location }}</a>
 {% endfor %}
