--- a/templates/partials/navbar_menu_end.html
+++ b/templates/partials/navbar_menu_end.html
@@ -12,7 +12,7 @@
        role="button"
        data-bs-toggle="dropdown"
        aria-expanded="false"
-       href="javascript:void(0);"><i class="bi bi-person-fill user-text-color"></i> User</a>
+       href="javascript:"><i class="bi bi-person-fill user-text-color"></i> User</a>
     <ul class="dropdown-menu dropdown-menu-end"
         aria-labelledby="userDropdown">
       <li>
