--- a/templates/partials/navbar_menu_start.html
+++ b/templates/partials/navbar_menu_start.html
@@ -6,7 +6,7 @@
        role="button"
        data-bs-toggle="dropdown"
        aria-expanded="false"
-       href="javascript:void(0);"><i class="bi bi-cart-fill delivery-text-color"></i> Delivery</a>
+       href="javascript:"><i class="bi bi-cart-fill delivery-text-color"></i> Delivery</a>
     <ul class="dropdown-menu" aria-labelledby="userDropdown">
       <li>
         <a href="{% url 'delivery_create' %}" class="dropdown-item"><i class="bi bi-cart-plus-fill delivery-text-color"></i> New Delivery</a>
@@ -23,7 +23,7 @@
        role="button"
        data-bs-toggle="dropdown"
        aria-expanded="false"
-       href="javascript:void(0);"><i class="bi bi-box-seam-fill stock-text-color"></i> Stock</a>
+       href="javascript:"><i class="bi bi-box-seam-fill stock-text-color"></i> Stock</a>
     <ul class="dropdown-menu" aria-labelledby="userDropdown">
       <li>
         <a href="{% url 'stock_create' %}" class="dropdown-item"><i class="bi bi-box-seam-fill stock-text-color"></i> New Stock</a>
@@ -40,7 +40,7 @@
        role="button"
        data-bs-toggle="dropdown"
        aria-expanded="false"
-       href="javascript:void(0);"><i class="bi bi-box2-fill item-text-color"></i> Items</a>
+       href="javascript:"><i class="bi bi-box2-fill item-text-color"></i> Items</a>
     <ul class="dropdown-menu" aria-labelledby="userDropdown">
       <li>
         <a href="{% url 'item_create' %}" class="dropdown-item"><i class="bi bi-box2-fill item-text-color"></i> New Items</a>
@@ -65,7 +65,7 @@
        role="button"
        data-bs-toggle="dropdown"
        aria-expanded="false"
-       href="javascript:void(0);"><i class="bi bi-gear-fill setting-text-color"></i> Settings</a>
+       href="javascript:"><i class="bi bi-gear-fill setting-text-color"></i> Settings</a>
     <ul class="dropdown-menu" aria-labelledby="userDropdown">
       <li>
         <a href="{% url 'company_list' %}" class="dropdown-item"><i class="bi bi-buildings company-text-color"></i> Companies</a>
